# ai-infra-learning

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  Untitled.ipynb  Untitled1.ipynb
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/src/: cpp_basics.cpp  cpp_pointers_arrays.cpp  ranges_pipeline.cpp
cpp/tests/: CMakeLists.txt  test_basics.cpp
notebooks/: numpy_basics.ipynb
python/: main.py  ml_sanity_check.py
scripts/: build.sh  clean.sh  env-zephyr.sh
week1/: CMakeLists.txt  build.sh  main
week1/cpp/: cpp_basics.cpp  cpp_pointers_arrays.cpp  main.cpp
week1/notebooks/: numpy_basics.ipynb  sklearn_sanity.ipynb
week1/python/: python_basics.py
week1/tests/: CMakeLists.txt  test_basics.cpp  test_pointers.cpp
